add document & tests

--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-    "name": "RC5",
+    "name": "rc5",
     "version": "0.1.0",
-    "description": "RC-5 cipher protocol",
-    "keywords": "rc5",
+    "description": "RC-5 cipher protocol, https://en.wikipedia.org/wiki/RC5",
+    "keywords": [
+        "rc5",
+        "encryption"
+    ],
     "license": "MIT",
     "main": "rc5.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ashleygwilliams/my_package.git"
+    },
+    "author": "delong",
     "scripts": {
         "test": "node test.js"
     }
