--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rc5",
-    "version": "0.2.1",
+    "version": "0.4.0",
     "description": "RC-5 cipher protocol, https://en.wikipedia.org/wiki/RC5",
     "keywords": [
         "rc5",
@@ -9,7 +9,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/ashleygwilliams/my_package.git"
+        "url": "https://github.com/DeronW/rc5.js"
     },
     "author": "delong",
     "scripts": {
