--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rc5",
-    "version": "0.4.0",
+    "version": "0.5.0",
     "description": "RC-5 cipher protocol, https://en.wikipedia.org/wiki/RC5",
     "keywords": [
         "rc5",
@@ -14,5 +14,8 @@
     "author": "delong",
     "scripts": {
         "test": "node test.js"
+    },
+    "devDependencies": {
+        "eslint": "^5.16.0"
     }
 }
