--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
         "url": "https://github.com/DeronW/rc5.js"
     },
     "author": "delong",
-    "files": ["lib/*"],
+    "files": [
+        "lib/*"
+    ],
     "main": "lib/index.js",
     "scripts": {
         "test": "jest --coverage",
-        "build": "tsc",
-        "test_old": "jest --coverage old/__tests__/index.js"
+        "build": "tsc"
     },
     "devDependencies": {
-        "jest": "26.4.2",
-        "ts-jest": "26.3.0",
-        "typescript": "4.0.2"
+        "@types/jest": "29.2.1",
+        "@types/node": "18.11.9",
+        "jest": "29.2.2",
+        "ts-jest": "29.0.3",
+        "typescript": "4.8.4"
     }
 }
